[package]
name = "in-directory"
version = "1.0.2"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2021"

readme = "README.md"
license = "MPL-2.0"
description = "A trivial utility for running a command in a specific working directory"
repository = "https://github.com/Lucretiel/in"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell-escape = "0.1.5"
joinery = "3.0.0"
clap = { version = "4.3.10", features = ["derive", "unicode"] }

[[bin]]
name = "in"
path = "src/main.rs"
